c/examples/gcc/testsuite/c-c++-common/conflict-markers-5.c
/* Ensure we can handle mismatched conflict markers.  */

int p;

=======  /* { dg-error "conflict marker" } */

int q;

=======  /* { dg-error "conflict marker" } */

int r;
